oci-library/OOW-2020/OKE-Rancher/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  mushop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mushop
spec:
  hosts:
  - "*"
  gateways:
  - mushop-gateway
  http:
  - route:
    - destination:
        host: edge.default.svc.cluster.local
        port:
          number: 80
